update: restructure directory

--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Pet-Vet</title>
-    <script src="navbar/navbar.js" defer></script>
-    <link rel="stylesheet" href="navbar/navbar.css" />
+    <script src="../scripts/navbar.js" defer></script>
+    <link rel="stylesheet" href="../styles/navbar.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&family=Roboto:wght@300&display=swap"
       rel="stylesheet"
