--- a/frontend/html/dashboard.html
+++ b/frontend/html/dashboard.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard Pet-vet</title>
-    <link rel="stylesheet" href="dashboard.css">
+    <link rel="stylesheet" href="../styles/dashboard.css">
 </head>
 <body>
     <div class="table-container">
