file structre redifined

--- a/frontend/html/doctorAppointment.html
+++ b/frontend/html/doctorAppointment.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../styles/doctorAppointment.css">
+   <link rel="stylesheet" href="../styles/navbar.css">
+    
     <title>Doctor Appointment</title>
   </head>
   <body>
+    <header></header>
     <h1 id="heading">Appoint Your Doctor</h1>
     <form id="Doctor_Appointment_form">
         <label for="OwnerName">Owner Name</label>
@@ -28,3 +31,4 @@
     </form>
   </body>
 </html>
+<script type="module" src="../scripts/doctorAppointment.js"></script>
