--- a/frontend/html/doctorsdetails.html
+++ b/frontend/html/doctorsdetails.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/doctorsdetails.css">
+   <link rel="stylesheet" href="../styles/navbar.css">
     <title>Doctors
     </title>
 </head>
 <body>
+    <header></header>
     <h1>All doctors Detail will be shown here</h1>
     <div id="doctor_details_container">
         <div class="doctor_info">
@@ -74,3 +76,4 @@
     </div>
 </body>
 </html>
+<script type="module" src="../scripts/doctorsdetails.js"></script>
