day4 work fw22_0187

--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -18,22 +18,23 @@
       <div class="nvbr">
         <img src="../assets/images/Pet-Vet logo.png" alt="" />
         <a href="../index.html">Home</a>
-        <a href="../html/doctorAppointment.html">Appointment</a>
+        <a href="../html/doctorsdetails.html">Appointment</a>
         <a href="../html/doctorApply.html">Doctor Apply</a>
         <a href="../html/dashboard.html">DashBoard</a>
         <a id="loginData" href="../html/login.html">Login</a>
       </div>
     </header>
     <main>
-      <div id="container">
+      <div id="mainPage">
         <h2>Login</h2>
 
-        <label>Email</label>
-        <input type="email" id="email" required />
-        <label>Password</label>
-        <input type="password" id="password" required />
-
-        <button id="signin-btn">Apply Now</button>
+        <form id="loginDoc" action="">
+          <label>Email</label>
+          <input type="email" id="email" required />
+          <label>Password</label>
+          <input type="password" id="password" required />
+          <input type="submit" id="signin-btn" value="Login" />
+        </form>
       </div>
     </main>
   </body>
