Api fetching of doctors done and img addded

--- a/frontend/html/doctorsdetails.html
+++ b/frontend/html/doctorsdetails.html
@@ -1,79 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/doctorsdetails.css">
-   <link rel="stylesheet" href="../styles/navbar.css">
-    <title>Doctors
-    </title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles/doctorsdetails.css" />
+    <link rel="stylesheet" href="../styles/navbar.css" />
+    <link rel="stylesheet" href="../styles/alert.css" />
+    <script
+      src="https://kit.fontawesome.com/add05b7e25.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Doctors</title>
+  </head>
+  <body>
     <header></header>
     <h1>All doctors Detail will be shown here</h1>
-    <div id="doctor_details_container">
-        <div class="doctor_info">
-            <div class="doctor_img">
-                <img src="https://th.bing.com/th?id=OIP.cububKdcQPlH2Gpvs3EidgAAAA&w=250&h=250&c=8&rs=1&qlt=90&o=6&dpr=1.3&pid=3.1&rm=2" alt="" srcset="">
-            </div>
-            <p class="doctor_name">NAME: <span>  Altaf khan</span></p>
-            <p class="doctor_exp">Experience: <span> 3 years</span> </p>
-            <p class="doctor_fees">FEES: <span>400 rupees </span> </p>
-            <p class="doctor_slots">SLOTS(Available): <span>400 rupees </span> </p>
-            <button onclick="window.location.href = './doctorAppointment.html'" class="doctor_appointment_button">Book-Now</button>
-        </div>
-        <div class="doctor_info">
-            <div class="doctor_img">
-                <img src="https://th.bing.com/th?id=OIP.cububKdcQPlH2Gpvs3EidgAAAA&w=250&h=250&c=8&rs=1&qlt=90&o=6&dpr=1.3&pid=3.1&rm=2" alt="" srcset="">
-            </div>
-            <p class="doctor_name">NAME: <span>  Altaf khan</span></p>
-            <p class="doctor_exp">Experience: <span> 3 years</span> </p>
-            <p class="doctor_fees">FEES: <span>400 rupees </span> </p>
-            <p class="doctor_slots">SLOTS(Available): <span>400 rupees </span> </p>
-            <button href="./doctorAppointment.html" class="doctor_appointment_button">Book-Now</button>
-        </div>
-        <div class="doctor_info">
-            <div class="doctor_img">
-                <img src="https://th.bing.com/th?id=OIP.cububKdcQPlH2Gpvs3EidgAAAA&w=250&h=250&c=8&rs=1&qlt=90&o=6&dpr=1.3&pid=3.1&rm=2" alt="" srcset="">
-            </div>
-            <p class="doctor_name">NAME: <span>  Altaf khan</span></p>
-            <p class="doctor_exp">Experience: <span> 3 years</span> </p>
-            <p class="doctor_fees">FEES: <span>400 rupees </span> </p>
-            <p class="doctor_slots">SLOTS(Available): <span>400 rupees </span> </p>
-            <button href="./doctorAppointment.html" class="doctor_appointment_button">Book-Now</button>
-        </div>
-        <div class="doctor_info">
-            <div class="doctor_img">
-                <img src="https://th.bing.com/th?id=OIP.cububKdcQPlH2Gpvs3EidgAAAA&w=250&h=250&c=8&rs=1&qlt=90&o=6&dpr=1.3&pid=3.1&rm=2" alt="" srcset="">
-            </div>
-            <p class="doctor_name">NAME: <span>  Altaf khan</span></p>
-            <p class="doctor_exp">Experience: <span> 3 years</span> </p>
-            <p class="doctor_fees">FEES: <span>400 rupees </span> </p>
-            <p class="doctor_slots">SLOTS(Available): <span>400 rupees </span> </p>
-            <button href="./doctorAppointment.html" class="doctor_appointment_button">Book-Now</button>
-        </div>
-        <div class="doctor_info">
-            <div class="doctor_img">
-                <img src="https://th.bing.com/th?id=OIP.cububKdcQPlH2Gpvs3EidgAAAA&w=250&h=250&c=8&rs=1&qlt=90&o=6&dpr=1.3&pid=3.1&rm=2" alt="" srcset="">
-            </div>
-            <p class="doctor_name">NAME: <span>  Altaf khan</span></p>
-            <p class="doctor_exp">Experience: <span> 3 years</span> </p>
-            <p class="doctor_fees">FEES: <span>400 rupees </span> </p>
-            <p class="doctor_slots">SLOTS(Available): <span>400 rupees </span> </p>
-            <button href="./doctorAppointment.html" class="doctor_appointment_button">Book-Now</button>
-        </div>
-        <div class="doctor_info">
-            <div class="doctor_img">
-                <img src="https://th.bing.com/th?id=OIP.cububKdcQPlH2Gpvs3EidgAAAA&w=250&h=250&c=8&rs=1&qlt=90&o=6&dpr=1.3&pid=3.1&rm=2" alt="" srcset="">
-            </div>
-            <p class="doctor_name">NAME: <span>  Altaf khan</span></p>
-            <p class="doctor_exp">Experience: <span> 3 years</span> </p>
-            <p class="doctor_fees">FEES: <span>400 rupees </span> </p>
-            <p class="doctor_slots">SLOTS(Available): <span>400 rupees </span> </p>
-            <button href="./doctorAppointment.html" class="doctor_appointment_button">Book-Now</button>
-        </div>
-    </div>
-</body>
+    <div id="doctor_details_container"></div>
+  </body>
 </html>
 <script type="module" src="../scripts/doctorsdetails.js"></script>
