navbar fixed and page linked correctly

--- a/frontend/html/doctorsdetails.html
+++ b/frontend/html/doctorsdetails.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header></header>
-    <h1>All doctors Detail will be shown here</h1>
+    <h1>Choose Doctor For Pet Care</h1>
     <div id="doctor_details_container"></div>
   </body>
 </html>
