--- a/frontend/html/dashboard.html
+++ b/frontend/html/dashboard.html
@@ -13,90 +13,22 @@
         <table class="table">
             <thead>
                 <tr>
-                    <th>Date</th>
-                    <th>End Data</th>
-                    <th>Pet Type</th>
-                    <th>Meeting Mode</th>
-                    <th>Current Status</th>
-                    <th>Toogle-Status</th>
+                    <th>Doctor ID</th>
+                    <th>Owner Name</th>
+                    <th>Email</th>
+                    <th>Phone No</th>
+                    <th> Pet Type</th>
+                    <th>Pet-Issue</th>
+                    <th>Meeting Data</th>
+                    <th>Status</th>
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                   <td data-label="Date">
-                    1 jan 2021
-                   </td>
-                   <td data-label="End Date">
-                    2 jan 2021
-                   </td>
-                   <td data-label="Pet Type">
-                    Dogy
-                   </td>
-                   <td data-label="Meeting Mode">
-                   Online Meet
-                   </td>
-                   <td data-label="Current Status">
-                    <span class="text_open">[Pending]</span>
-                   </td>
-                   <td data-label="Toogle-Status"><a href="Toogle-Status"class='btn'>Confirm</a></td>
-                </tr>
-                <tr>
-                   <td data-label="Date">
-                    1 jan 2021
-                   </td>
-                   <td data-label="End Date">
-                    2 jan 2021
-                   </td>
-                   <td data-label="Pet Type">
-                    Dogy
-                   </td>
-                   <td data-label="Meeting Mode">
-                   Online Meet
-                   </td>
-                   <td data-label="Current Status">
-                    <span class="text_open">[Pending]</span>
-                   </td>
-                   <td data-label="Toogle-Status"><a href="Toogle-Status"class='btn'>Confirm</a></td>
-                </tr>
-                <tr>
-                   <td data-label="Date">
-                    1 jan 2021
-                   </td>
-                   <td data-label="End Date">
-                    2 jan 2021
-                   </td>
-                   <td data-label="Pet Type">
-                    Dogy
-                   </td>
-                   <td data-label="Meeting Mode">
-                   Online Meet
-                   </td>
-                   <td data-label="Current Status">
-                    <span class="text_open">[Pending]</span>
-                   </td>
-                   <td data-label="Toogle-Status"><a href="Toogle-Status"class='btn'>Confirm</a></td>
-                </tr>
-                <tr>
-                   <td data-label="Date">
-                    1 jan 2021
-                   </td>
-                   <td data-label="End Date">
-                    2 jan 2021
-                   </td>
-                   <td data-label="Pet Type">
-                    Dogy
-                   </td>
-                   <td data-label="Meeting Mode">
-                   Online Meet
-                   </td>
-                   <td data-label="Current Status">
-                    <span class="text_open">[Pending]</span>
-                   </td>
-                   <td data-label="Toogle-Status"><a href="Toogle-Status"class='btn'>Confirm</a></td>
-                </tr>
+          
             </tbody>
         </table>
     </div>
     
 </body>
+<script src="../scripts/dashboard.js"></script>
 </html>
