updated index login

--- a/frontend/html/doctorApply.html
+++ b/frontend/html/doctorApply.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
     />
     <script src="../scripts/doctorApply.js" defer></script>
+    <script src="../scripts/navbar.js" defer></script>
   </head>
   <body>
     <header>
@@ -21,7 +22,13 @@
         <a href="../html/doctorsdetails.html">Appointment</a>
         <a href="../html/doctorApply.html">Doctor Apply</a>
         <a href="../html/dashboard.html">DashBoard</a>
-        <a href="../html/login.html">Login</a>
+        <div id="loginOpt">
+          Login
+        </div>
+        <div id="logindrop">
+          <a id="loginData" href="../html/login.html">Admin Login</a>
+          <a id="loginData" href="../html/login.html">Doctor Login</a>
+        </div>
       </div>
     </header>
     <main>
