--- a/frontend/html/doctorAppointment.html
+++ b/frontend/html/doctorAppointment.html
@@ -5,16 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../styles/doctorAppointment.css" />
-    <link rel="stylesheet" href="../styles/navbar.css" />
     <link rel="stylesheet" href="../styles/alert.css" />
+    <link rel="stylesheet" href="../styles/navbar.css" />
     <script
       src="https://kit.fontawesome.com/add05b7e25.js"
       crossorigin="anonymous"
     ></script>
+    <script src="../scripts/navbar.js" defer></script>
     <title>Doctor Appointment</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <div class="nvbr">
+        <img src="../assets/images/Pet-Vet logo.png" alt="" />
+        <a href="../index.html">Home</a>
+        <a href="../html/doctorsdetails.html">Appointment</a>
+        <a href="../html/doctorApply.html">Doctor Apply</a>
+        <a href="../html/dashboard.html">DashBoard</a>
+        <div id="loginOpt">
+          Login
+        </div>
+        <div id="logindrop">
+          <a id="loginData" href="../html/login.html">Admin Login</a>
+          <a id="loginData" href="../html/login.html">Doctor Login</a>
+        </div>
+        <div id="hamburger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+    </header>
 
     <h1 id="heading">Appoint Your Doctor</h1>
     <form id="Doctor_Appointment_form">
