--- a/frontend/html/doctorsdetails.html
+++ b/frontend/html/doctorsdetails.html
@@ -11,10 +11,31 @@
       src="https://kit.fontawesome.com/add05b7e25.js"
       crossorigin="anonymous"
     ></script>
+    <script src="../scripts/navbar.js" defer></script>
     <title>Doctors</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <div class="nvbr">
+        <img src="../assets/images/Pet-Vet logo.png" alt="" />
+        <a href="../index.html">Home</a>
+        <a href="../html/doctorsdetails.html">Appointment</a>
+        <a href="../html/doctorApply.html">Doctor Apply</a>
+        <a href="../html/dashboard.html">DashBoard</a>
+        <div id="loginOpt">
+          Login
+        </div>
+        <div id="logindrop">
+          <a id="loginData" href="../html/login.html">Admin Login</a>
+          <a id="loginData" href="../html/login.html">Doctor Login</a>
+        </div>
+      </div>
+      <div id="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </header>
     <h1>Choose Doctor For Pet Care</h1>
     <div id="doctor_details_container"></div>
   </body>
