--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&family=Roboto:wght@300&display=swap"
       rel="stylesheet"
     />
+    <script src="../scripts/navbar.js" defer></script>
   </head>
   <body>
     <header>
@@ -21,7 +22,18 @@
         <a href="../html/doctorsdetails.html">Appointment</a>
         <a href="../html/doctorApply.html">Doctor Apply</a>
         <a href="../html/dashboard.html">DashBoard</a>
-        <a id="loginData" href="../html/login.html">Login</a>
+        <div id="loginOpt">
+          Login
+        </div>
+        <div id="logindrop">
+          <a id="loginData" href="../html/login.html">Admin Login</a>
+          <a id="loginData" href="../html/login.html">Doctor Login</a>
+        </div>
+        <div id="hamburger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
       </div>
     </header>
     <main>
