update: fixed admin login

--- a/frontend/html/adminLogin.html
+++ b/frontend/html/adminLogin.html
@@ -7,7 +7,7 @@
     <title>Login</title>
     <link rel="stylesheet" href="../styles/login.css" />
     <link rel="stylesheet" href="../styles/navbar.css" />
-    <script src="../scripts/login.js" defer></script>
+    <script src="../scripts/adminLogin.js" defer></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&family=Roboto:wght@300&display=swap"
       rel="stylesheet"
