--- a/frontend/html/doctorAppointment.html
+++ b/frontend/html/doctorAppointment.html
@@ -26,7 +26,7 @@
           Login
         </div>
         <div id="logindrop">
-          <a id="loginData" href="../html/login.html">Admin Login</a>
+          <a id="loginData" href="../html/adminLogin.html">Admin Login</a>
           <a id="loginData" href="../html/login.html">Doctor Login</a>
         </div>
         <div id="hamburger">
