--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,7 +35,7 @@
         <a href="html/dashboard.html">DashBoard</a>
         <div id="loginOpt">Login</div>
         <div id="logindrop">
-          <a id="loginData" href="./html/login.html">Admin Login</a>
+          <a id="loginData" href="./html/adminLogin.html">Admin Login</a>
           <a id="loginData" href="./html/login.html">Doctor Login</a>
         </div>
         <div id="hamburger">
