update: misc changes

--- a/frontend/html/doctorApply.html
+++ b/frontend/html/doctorApply.html
@@ -43,7 +43,7 @@
           <label>Email</label>
           <input type="email" id="email" required />
           <label>Avatar URL</label>
-          <input type="text" id="avatar" required />
+          <input type="text" id="profile_img" required />
           <label>Phone</label>
           <input type="number" id="phone" required />
           <label>Specialization</label>
