--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -21,7 +21,7 @@
         <a href="../index.html">Home</a>
         <a href="../html/doctorsdetails.html">Appointment</a>
         <a href="../html/doctorApply.html">Doctor Apply</a>
-        <a href="../html/dashboard.html">DashBoard</a>
+        <!-- <a href="../html/dashboard.html">DashBoard</a> -->
         <div id="loginOpt">
           Login
         </div>
