--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,7 +32,7 @@
         <a href="index.html">Home</a>
         <a href="html/doctorsdetails.html">Appointment</a>
         <a href="html/doctorApply.html">Doctor Apply</a>
-        <a href="html/dashboard.html">DashBoard</a>
+        <!-- <a href="html/dashboard.html">DashBoard</a> -->
         <div id="loginOpt">Login</div>
         <div id="logindrop">
           <a id="loginData" href="./html/adminLogin.html">Admin Login</a>
